--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -76,18 +76,18 @@
 	
 	<td align="left"><a href="generate.go">generate.go</a></td>
 	<td></td>
-	<td align="right">11400</td>
+	<td align="right">11744</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="generate_test.go">generate_test.go</a></td>
 	<td></td>
-	<td align="right">2693</td>
+	<td align="right">2806</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,7 +96,16 @@
 	<td></td>
 	<td align="right">2980</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="source/">source/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,16 +114,16 @@
 	<td></td>
 	<td align="right">1606</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="template.go">template.go</a></td>
 	<td></td>
-	<td align="right">3619</td>
+	<td align="right">3604</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 
