--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/source/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/source/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="theme-color" content="#375EAB"/>
 
-  <title>src/github.com/johnstarich/go/gopages/internal/pipe/ - GoPages</title>
+  <title>src/github.com/johnstarich/go/gopages/internal/generate/source/ - GoPages</title>
 
 <link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
@@ -37,7 +37,7 @@
 
   <h1>
     Directory
-    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal">internal</a>/<span class="text-muted">pipe/</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate">generate</a>/<span class="text-muted">source/</span>
   </h1>
 
 
@@ -45,7 +45,7 @@
 
 
   <h2>
-    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/pipe">github.com/johnstarich/go/gopages/internal/pipe</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source">github.com/johnstarich/go/gopages/internal/generate/source</a>
   </h2>
 
 
@@ -74,18 +74,9 @@
 
 <tr>
 	
-	<td align="left"><a href="op.go">op.go</a></td>
+	<td align="left"><a href="link.go">link.go</a></td>
 	<td></td>
-	<td align="right">1277</td>
-	<td></td>
-	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
-</tr>
-
-<tr>
-	
-	<td align="left"><a href="op_test.go">op_test.go</a></td>
-	<td></td>
-	<td align="right">1529</td>
+	<td align="right">247</td>
 	<td></td>
 	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
