--- a/gopages/pkg/github.com/johnstarich/go/gopages/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/index.html
@@ -104,6 +104,8 @@ Usage of gopages:
   	The Git username to push with
 -out string
   	Output path for static files (default &#34;dist&#34;)
+-source-link string
+  	Custom source code link template. Disables built-in source code pages. For example, &#39;<a href="https://github.com/johnstarich/go/blob/master/gopages/">https://github.com/johnstarich/go/blob/master/gopages/</a>{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#39; generates links compatible with GitHub and GitLab. Must be a valid Go template and must generate valid URLs.
 </pre>
 
 	
