--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/index.html
@@ -76,18 +76,36 @@
 	
 	<td align="left"><a href="flags.go">flags.go</a></td>
 	<td></td>
-	<td align="right">1467</td>
+	<td align="right">2145</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.050654912 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="flags_test.go">flags_test.go</a></td>
 	<td></td>
-	<td align="right">274</td>
+	<td align="right">1106</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.050654912 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="linker.go">linker.go</a></td>
+	<td></td>
+	<td align="right">1772</td>
+	<td></td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="linker_test.go">linker_test.go</a></td>
+	<td></td>
+	<td align="right">3882</td>
+	<td></td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 
