--- a/gopages/src/github.com/johnstarich/go/gopages/internal/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/index.html
@@ -78,7 +78,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,7 +87,16 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="module/">module/</a></td>
+	<td></td>
+	<td align="right">4096</td>
+	<td></td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,7 +105,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,7 +114,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
+	<td align="left">2021-05-24 00:45:55.05465504 +0000 UTC</td>
 </tr>
 
 
