--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/index.html
@@ -76,27 +76,45 @@
 	
 	<td align="left"><a href="doc.go">doc.go</a></td>
 	<td></td>
-	<td align="right">481</td>
+	<td align="right">495</td>
 	<td></td>
-	<td align="left">2021-05-24 00:50:02.653663444 +0000 UTC</td>
+	<td align="left">2021-05-24 03:53:07.056451126 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="main.go">main.go</a></td>
 	<td></td>
-	<td align="right">1661</td>
+	<td align="right">1690</td>
 	<td></td>
-	<td align="left">2021-05-24 00:50:02.653663444 +0000 UTC</td>
+	<td align="left">2021-05-24 03:53:07.056451126 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="main_test.go">main_test.go</a></td>
 	<td></td>
-	<td align="right">1719</td>
+	<td align="right">2215</td>
 	<td></td>
-	<td align="left">2021-05-24 00:50:02.653663444 +0000 UTC</td>
+	<td align="left">2021-05-24 03:53:07.056451126 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="wrap.go">wrap.go</a></td>
+	<td></td>
+	<td align="right">3123</td>
+	<td></td>
+	<td align="left">2021-05-24 03:53:07.056451126 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="wrap_test.go">wrap_test.go</a></td>
+	<td></td>
+	<td align="right">1650</td>
+	<td></td>
+	<td align="left">2021-05-24 03:53:07.056451126 +0000 UTC</td>
 </tr>
 
 
