--- a/gopages/pkg/github.com/johnstarich/go/gopages/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/index.html
@@ -97,7 +97,8 @@ Usage of gopages:
 -brand-title string
   	Branding title in the top left of documentation
 -gh-pages
-  	Automatically commit the output path to the gh-pages branch. The current branch must be clean.
+  	Automatically commit the output path to the gh-pages branch. The current branch
+  	must be clean.
 -gh-pages-token string
   	The Git token to push with. Usually this is an API key.
 -gh-pages-user string
@@ -105,7 +106,10 @@ Usage of gopages:
 -out string
   	Output path for static files (default &#34;dist&#34;)
 -source-link string
-  	Custom source code link template. Disables built-in source code pages. For example, &#39;<a href="https://github.com/johnstarich/go/blob/master/gopages/">https://github.com/johnstarich/go/blob/master/gopages/</a>{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#39; generates links compatible with GitHub and GitLab. Must be a valid Go template and must generate valid URLs.
+  	Custom source code link template. Disables built-in source code pages. For
+  	example, &#34;<a href="https://github.com/johnstarich/go/blob/master/gopages/">https://github.com/johnstarich/go/blob/master/gopages/</a>{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;
+  	generates links compatible with GitHub and GitLab. Must be a valid Go template
+  	and must generate valid URLs.
 </pre>
 
 	
