--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
@@ -123,9 +123,10 @@
 <span id="L67" class="ln">    67  </span>		&#34;comment&#34;: func(s string) string {
 <span id="L68" class="ln">    68  </span>			return strings.ReplaceAll(s, &#34;\n&#34;, &#34;\n// &#34;)
 <span id="L69" class="ln">    69  </span>		},
-<span id="L70" class="ln">    70  </span>	}
-<span id="L71" class="ln">    71  </span>}
-<span id="L72" class="ln">    72  </span>
+<span id="L70" class="ln">    70  </span>		&#34;wordWrap&#34;: wordWrapLines,
+<span id="L71" class="ln">    71  </span>	}
+<span id="L72" class="ln">    72  </span>}
+<span id="L73" class="ln">    73  </span>
 </pre><p></p>
 
 <div id="footer">
