--- a/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
@@ -73,19 +73,23 @@
 <span id="L17" class="ln">    17  </span><span class="comment">//   -brand-title string</span>
 <span id="L18" class="ln">    18  </span><span class="comment">//     	Branding title in the top left of documentation</span>
 <span id="L19" class="ln">    19  </span><span class="comment">//   -gh-pages</span>
-<span id="L20" class="ln">    20  </span><span class="comment">//     	Automatically commit the output path to the gh-pages branch. The current branch must be clean.</span>
-<span id="L21" class="ln">    21  </span><span class="comment">//   -gh-pages-token string</span>
-<span id="L22" class="ln">    22  </span><span class="comment">//     	The Git token to push with. Usually this is an API key.</span>
-<span id="L23" class="ln">    23  </span><span class="comment">//   -gh-pages-user string</span>
-<span id="L24" class="ln">    24  </span><span class="comment">//     	The Git username to push with</span>
-<span id="L25" class="ln">    25  </span><span class="comment">//   -out string</span>
-<span id="L26" class="ln">    26  </span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
-<span id="L27" class="ln">    27  </span><span class="comment">//   -source-link string</span>
-<span id="L28" class="ln">    28  </span><span class="comment">//     	Custom source code link template. Disables built-in source code pages. For example, &#39;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#39; generates links compatible with GitHub and GitLab. Must be a valid Go template and must generate valid URLs.</span>
-<span id="L29" class="ln">    29  </span><span class="comment">// </span>
-<span id="L30" class="ln">    30  </span><span class="comment">//</span>
-<span id="L31" class="ln">    31  </span>package main
-<span id="L32" class="ln">    32  </span>
+<span id="L20" class="ln">    20  </span><span class="comment">//     	Automatically commit the output path to the gh-pages branch. The current branch</span>
+<span id="L21" class="ln">    21  </span><span class="comment">//     	must be clean.</span>
+<span id="L22" class="ln">    22  </span><span class="comment">//   -gh-pages-token string</span>
+<span id="L23" class="ln">    23  </span><span class="comment">//     	The Git token to push with. Usually this is an API key.</span>
+<span id="L24" class="ln">    24  </span><span class="comment">//   -gh-pages-user string</span>
+<span id="L25" class="ln">    25  </span><span class="comment">//     	The Git username to push with</span>
+<span id="L26" class="ln">    26  </span><span class="comment">//   -out string</span>
+<span id="L27" class="ln">    27  </span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
+<span id="L28" class="ln">    28  </span><span class="comment">//   -source-link string</span>
+<span id="L29" class="ln">    29  </span><span class="comment">//     	Custom source code link template. Disables built-in source code pages. For</span>
+<span id="L30" class="ln">    30  </span><span class="comment">//     	example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;</span>
+<span id="L31" class="ln">    31  </span><span class="comment">//     	generates links compatible with GitHub and GitLab. Must be a valid Go template</span>
+<span id="L32" class="ln">    32  </span><span class="comment">//     	and must generate valid URLs.</span>
+<span id="L33" class="ln">    33  </span><span class="comment">// </span>
+<span id="L34" class="ln">    34  </span><span class="comment">//</span>
+<span id="L35" class="ln">    35  </span>package main
+<span id="L36" class="ln">    36  </span>
 </pre><p></p>
 
 <div id="footer">
