--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.15.12";</script>
+<script>var goVersion = "go1.15.15";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
@@ -114,56 +114,60 @@
 <span id="L58" class="ln">    58  </span>`)
 <span id="L59" class="ln">    59  </span>	writeFile(&#34;.git/something&#34;, `ignored dot dir`)
 <span id="L60" class="ln">    60  </span>	writeFile(&#34;.dotfile&#34;, `ignored dot file`)
-<span id="L61" class="ln">    61  </span>
-<span id="L62" class="ln">    62  </span>	args := flags.Args{}
-<span id="L63" class="ln">    63  </span>	const modulePackage = &#34;github.com/my/thing&#34;
-<span id="L64" class="ln">    64  </span>	linker, err := args.Linker(modulePackage)
-<span id="L65" class="ln">    65  </span>	require.NoError(t, err)
-<span id="L66" class="ln">    66  </span>	err = Docs(thing, modulePackage, thingFS, outputFS, args, linker)
-<span id="L67" class="ln">    67  </span>	assert.NoError(t, err)
-<span id="L68" class="ln">    68  </span>
-<span id="L69" class="ln">    69  </span>	expectedDocs := []string{
-<span id="L70" class="ln">    70  </span>		&#34;404.html&#34;,
-<span id="L71" class="ln">    71  </span>		&#34;index.html&#34;,
-<span id="L72" class="ln">    72  </span>		&#34;pkg/github.com/index.html&#34;,
-<span id="L73" class="ln">    73  </span>		&#34;pkg/github.com/my/index.html&#34;,
-<span id="L74" class="ln">    74  </span>		&#34;pkg/github.com/my/thing/index.html&#34;,
-<span id="L75" class="ln">    75  </span>		&#34;pkg/github.com/my/thing/internal/hello/index.html&#34;,
-<span id="L76" class="ln">    76  </span>		&#34;pkg/github.com/my/thing/internal/index.html&#34;,
-<span id="L77" class="ln">    77  </span>		&#34;pkg/github.com/my/thing/mylib/index.html&#34;,
-<span id="L78" class="ln">    78  </span>		&#34;pkg/index.html&#34;,
-<span id="L79" class="ln">    79  </span>		&#34;src/github.com/index.html&#34;,
-<span id="L80" class="ln">    80  </span>		&#34;src/github.com/my/index.html&#34;,
-<span id="L81" class="ln">    81  </span>		&#34;src/github.com/my/thing/index.html&#34;,
-<span id="L82" class="ln">    82  </span>		&#34;src/github.com/my/thing/internal/hello/hello.go.html&#34;,
-<span id="L83" class="ln">    83  </span>		&#34;src/github.com/my/thing/internal/hello/index.html&#34;,
-<span id="L84" class="ln">    84  </span>		&#34;src/github.com/my/thing/internal/index.html&#34;,
-<span id="L85" class="ln">    85  </span>		&#34;src/github.com/my/thing/main.go.html&#34;,
-<span id="L86" class="ln">    86  </span>		&#34;src/github.com/my/thing/mylib/index.html&#34;,
-<span id="L87" class="ln">    87  </span>		&#34;src/github.com/my/thing/mylib/lib.go.html&#34;,
-<span id="L88" class="ln">    88  </span>		&#34;src/index.html&#34;,
-<span id="L89" class="ln">    89  </span>	}
-<span id="L90" class="ln">    90  </span>	var foundDocs []string
-<span id="L91" class="ln">    91  </span>	require.NoError(t, walkFiles(outputFS, &#34;&#34;, func(path string, isDir bool) error {
-<span id="L92" class="ln">    92  </span>		if !isDir &amp;&amp; !strings.HasPrefix(path, filepath.Join(&#34;lib&#34;, &#34;godoc&#34;)) {
-<span id="L93" class="ln">    93  </span>			foundDocs = append(foundDocs, path)
-<span id="L94" class="ln">    94  </span>		}
-<span id="L95" class="ln">    95  </span>		return nil
-<span id="L96" class="ln">    96  </span>	}))
-<span id="L97" class="ln">    97  </span>	sort.Strings(foundDocs)
-<span id="L98" class="ln">    98  </span>	assert.Equal(t, expectedDocs, foundDocs)
-<span id="L99" class="ln">    99  </span>
-<span id="L100" class="ln">   100  </span>	f, err := outputFS.Open(&#34;pkg/github.com/my/thing/index.html&#34;)
-<span id="L101" class="ln">   101  </span>	require.NoError(t, err)
-<span id="L102" class="ln">   102  </span>	indexContents, err := ioutil.ReadAll(f)
-<span id="L103" class="ln">   103  </span>	require.NoError(t, err)
-<span id="L104" class="ln">   104  </span>	assert.Contains(t, string(indexContents), &#34;mylib&#34;)
-<span id="L105" class="ln">   105  </span>}
-<span id="L106" class="ln">   106  </span>
+<span id="L61" class="ln">    61  </span>	writeFile(&#34;%name.PascalCased%/other.go&#34;, `package bad_url_decode`)
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>	args := flags.Args{}
+<span id="L64" class="ln">    64  </span>	const modulePackage = &#34;github.com/my/thing&#34;
+<span id="L65" class="ln">    65  </span>	linker, err := args.Linker(modulePackage)
+<span id="L66" class="ln">    66  </span>	require.NoError(t, err)
+<span id="L67" class="ln">    67  </span>	err = Docs(thing, modulePackage, thingFS, outputFS, args, linker)
+<span id="L68" class="ln">    68  </span>	assert.NoError(t, err)
+<span id="L69" class="ln">    69  </span>
+<span id="L70" class="ln">    70  </span>	expectedDocs := []string{
+<span id="L71" class="ln">    71  </span>		&#34;404.html&#34;,
+<span id="L72" class="ln">    72  </span>		&#34;index.html&#34;,
+<span id="L73" class="ln">    73  </span>		&#34;pkg/github.com/index.html&#34;,
+<span id="L74" class="ln">    74  </span>		&#34;pkg/github.com/my/index.html&#34;,
+<span id="L75" class="ln">    75  </span>		&#34;pkg/github.com/my/thing/%name.PascalCased%/index.html&#34;, <span class="comment">// Verifies fix for https://github.com/JohnStarich/go/issues/7</span>
+<span id="L76" class="ln">    76  </span>		&#34;pkg/github.com/my/thing/index.html&#34;,
+<span id="L77" class="ln">    77  </span>		&#34;pkg/github.com/my/thing/internal/hello/index.html&#34;,
+<span id="L78" class="ln">    78  </span>		&#34;pkg/github.com/my/thing/internal/index.html&#34;,
+<span id="L79" class="ln">    79  </span>		&#34;pkg/github.com/my/thing/mylib/index.html&#34;,
+<span id="L80" class="ln">    80  </span>		&#34;pkg/index.html&#34;,
+<span id="L81" class="ln">    81  </span>		&#34;src/github.com/index.html&#34;,
+<span id="L82" class="ln">    82  </span>		&#34;src/github.com/my/index.html&#34;,
+<span id="L83" class="ln">    83  </span>		&#34;src/github.com/my/thing/%name.PascalCased%/index.html&#34;,
+<span id="L84" class="ln">    84  </span>		&#34;src/github.com/my/thing/%name.PascalCased%/other.go.html&#34;,
+<span id="L85" class="ln">    85  </span>		&#34;src/github.com/my/thing/index.html&#34;,
+<span id="L86" class="ln">    86  </span>		&#34;src/github.com/my/thing/internal/hello/hello.go.html&#34;,
+<span id="L87" class="ln">    87  </span>		&#34;src/github.com/my/thing/internal/hello/index.html&#34;,
+<span id="L88" class="ln">    88  </span>		&#34;src/github.com/my/thing/internal/index.html&#34;,
+<span id="L89" class="ln">    89  </span>		&#34;src/github.com/my/thing/main.go.html&#34;,
+<span id="L90" class="ln">    90  </span>		&#34;src/github.com/my/thing/mylib/index.html&#34;,
+<span id="L91" class="ln">    91  </span>		&#34;src/github.com/my/thing/mylib/lib.go.html&#34;,
+<span id="L92" class="ln">    92  </span>		&#34;src/index.html&#34;,
+<span id="L93" class="ln">    93  </span>	}
+<span id="L94" class="ln">    94  </span>	var foundDocs []string
+<span id="L95" class="ln">    95  </span>	require.NoError(t, walkFiles(outputFS, &#34;&#34;, func(path string, isDir bool) error {
+<span id="L96" class="ln">    96  </span>		if !isDir &amp;&amp; !strings.HasPrefix(path, filepath.Join(&#34;lib&#34;, &#34;godoc&#34;)) {
+<span id="L97" class="ln">    97  </span>			foundDocs = append(foundDocs, path)
+<span id="L98" class="ln">    98  </span>		}
+<span id="L99" class="ln">    99  </span>		return nil
+<span id="L100" class="ln">   100  </span>	}))
+<span id="L101" class="ln">   101  </span>	sort.Strings(foundDocs)
+<span id="L102" class="ln">   102  </span>	assert.Equal(t, expectedDocs, foundDocs)
+<span id="L103" class="ln">   103  </span>
+<span id="L104" class="ln">   104  </span>	f, err := outputFS.Open(&#34;pkg/github.com/my/thing/index.html&#34;)
+<span id="L105" class="ln">   105  </span>	require.NoError(t, err)
+<span id="L106" class="ln">   106  </span>	indexContents, err := ioutil.ReadAll(f)
+<span id="L107" class="ln">   107  </span>	require.NoError(t, err)
+<span id="L108" class="ln">   108  </span>	assert.Contains(t, string(indexContents), &#34;mylib&#34;)
+<span id="L109" class="ln">   109  </span>}
+<span id="L110" class="ln">   110  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.15.12.<br/>
+Build version go1.15.15.<br/>
 </div>
 
 </div><!-- .container -->
