--- a/pipe/src/github.com/johnstarich/go/pipe/index.html
+++ b/pipe/src/github.com/johnstarich/go/pipe/index.html
@@ -78,7 +78,7 @@
 	<td></td>
 	<td align="right">10503</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 	<td></td>
 	<td align="right">1483</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,7 +96,25 @@
 	<td></td>
 	<td align="right">2266</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="funnel.go">funnel.go</a></td>
+	<td></td>
+	<td align="right">417</td>
+	<td></td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="funnel_test.go">funnel_test.go</a></td>
+	<td></td>
+	<td align="right">932</td>
+	<td></td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,7 +123,7 @@
 	<td></td>
 	<td align="right">47</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -114,7 +132,7 @@
 	<td></td>
 	<td align="right">0</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -123,7 +141,7 @@
 	<td></td>
 	<td align="right">4427</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -132,7 +150,7 @@
 	<td></td>
 	<td align="right">5936</td>
 	<td></td>
-	<td align="left">2021-10-02 06:31:25.346343093 +0000 UTC</td>
+	<td align="left">2021-10-03 04:45:04.240869336 +0000 UTC</td>
 </tr>
 
 
